fix: fixed z-index

--- a/src/scss/components/wins.scss
+++ b/src/scss/components/wins.scss
@@ -1,37 +1,41 @@
 .modal {
-    position: fixed;
-    top: 0;
-    bottom: 0;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba($color: #000000, $alpha: 0.7);
+  &__content {
+    background-color: var(--main-color);
+    right: 0;
     left: 0;
-    right: 0; 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba($color: #000000, $alpha: .7);
-    &__content {
-        background-color: var(--main-color);
-        right: 0;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 15px;
-        p {
-            font-size: 2.5rem;
-            color: var(--third-color);
-        }
-        button {
-            width: 10rem;
-            height: 3rem;
-            margin-bottom: 5px;
-            font-size: 1.3rem;
-            font-weight: 700;
-            border-radius: 4px;
-            border: none;
-            color: var(--third-color);
-            background-color: var(--secondary-color);
-            cursor: pointer;
-        }
+    align-items: center;
+    gap: 15px;
+    p {
+      font-size: 2.5rem;
+      color: var(--third-color);
     }
+    button {
+      width: 10rem;
+      height: 3rem;
+      margin-bottom: 5px;
+      font-size: 1.3rem;
+      font-weight: 700;
+      border-radius: 4px;
+      border: none;
+      color: var(--third-color);
+      background-color: var(--secondary-color);
+      cursor: pointer;
+    }
+    button:focus {
+      outline: none;
+    }
+  }
 }
